--- a/themes/hugo-PaperMod/layouts/partials/footer.html
+++ b/themes/hugo-PaperMod/layouts/partials/footer.html
@@ -1,14 +1,12 @@
 {{- if not (.Param "hideFooter") }}
 <footer class="footer">
     {{- if .Site.Copyright }}
-    <span>{{ .Site.Copyright | markdownify }}</span>
+    <span>© 2025 jodim</span>
     {{- else }}
     <span>&copy; {{ now.Year }} <a href="{{ "" | absLangURL }}">{{ .Site.Title }}</a></span>
     {{- end }}
     <span>
-        Powered by
-        <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
-        <a href="https://git.io/hugopapermod" rel="noopener" target="_blank">PaperMod</a>
+        Powered by Hugo & PaperMod
     </span>
 </footer>
 {{- end }}
