--- a/themes/hugo-PaperMod/layouts/partials/templates/opengraph.html
+++ b/themes/hugo-PaperMod/layouts/partials/templates/opengraph.html
@@ -43,8 +43,10 @@
 {{- $siteSeries := .Site.Taxonomies.series }}
 {{ with .Params.series }}{{- range $name := . }}
   {{- $series := index $siteSeries ($name | urlize) }}
-  {{- range $page := first 6 $series.Pages }}
-    {{- if ne $page.Permalink $permalink }}<meta property="og:see_also" content="{{ $page.Permalink }}" />{{ end }}
+  {{- if $series.Pages }}
+    {{- range $page := first 6 $series.Pages }}
+      {{- if ne $page.Permalink $permalink }}<meta property="og:see_also" content="{{ $page.Permalink }}" />{{ end }}
+    {{- end }}
   {{- end }}
 {{ end }}{{ end }}
 
