--- a/themes/hugo-PaperMod/layouts/partials/comments.html
+++ b/themes/hugo-PaperMod/layouts/partials/comments.html
@@ -1,3 +1,10 @@
 {{- /* Comments area start */ -}}
 {{- /* to add comments read => https://gohugo.io/content-management/comments/ */ -}}
+
+{{- if eq .Site.Params.comments true -}}
+    {{- if .Site.Config.Services.Disqus.Shortname -}}
+        {{- partial "templates/disqus" . -}}
+    {{- end -}}
+{{- end -}}
+
 {{- /* Comments area end */ -}}
