chore(seo): fixing canonical and adding googleanalytics

--- a/themes/hugo-PaperMod/layouts/partials/head.html
+++ b/themes/hugo-PaperMod/layouts/partials/head.html
@@ -22,7 +22,7 @@
     {{- .Summary | default (printf "%s - %s" .Title  .Site.Title) }}{{- else }}
     {{- with .Site.Params.description }}{{ . }}{{- end }}{{- end }}{{- end -}}">
 <meta name="author" content="{{ (partial "author.html" . ) }}">
-<link rel="canonical" href="{{ if .Params.canonicalURL -}} {{ trim .Params.canonicalURL " " }} {{- else -}} {{ .Permalink }} {{- end }}" />
+<link rel="canonical" href="{{ .Params.canonicalURL | default .Permalink }}">
 {{- if .Site.Params.analytics.google.SiteVerificationTag }}
 <meta name="google-site-verification" content="{{ .Site.Params.analytics.google.SiteVerificationTag }}" />
 {{- end }}
