chore(disqus): fix csp disqus

--- a/themes/hugo-PaperMod/layouts/partials/templates/disqus.html
+++ b/themes/hugo-PaperMod/layouts/partials/templates/disqus.html
@@ -1,10 +1,6 @@
-{{- if and .Site.Config.Services.Disqus.Shortname (not .Site.IsServer) (ne .Params.comments false) -}}
+{{- if .Site.Config.Services.Disqus.Shortname -}}
 <div id="disqus_thread"></div>
 <script>
-    var disqus_config = function () {
-        this.page.url = "{{ .Permalink }}";
-        this.page.identifier = "{{ .File.UniqueID }}";
-    };
     (function() {
         var d = document, s = d.createElement('script');
         s.src = 'https://{{ .Site.Config.Services.Disqus.Shortname }}.disqus.com/embed.js';
@@ -12,5 +8,5 @@
         (d.head || d.body).appendChild(s);
     })();
 </script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 {{- end -}}
